テキスト教材一覧ページに読破済み機能を実装

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,6 +4,7 @@ ja:
     models:
       text: テキスト教材
       movie: 動画教材
+      read_progress: 読破済み
     attributes:
       text:
         genre: ジャンル
@@ -13,6 +14,9 @@ ja:
         genre: ジャンル
         title: タイトル
         url: URL
+      read_progress:
+        text: テキスト教材
+        user: ユーザー
     attributes:
       id: ID
       namespace: 名前空間
